--- a/examples/index.html
+++ b/examples/index.html
@@ -2,19 +2,13 @@
 <html>
 <head>
 	<meta charset="utf-8">
-	<title>Let's go Shopping</title>
+	<title>Immer Aktuell</title>
 </head>
 <body>
-	<h1>Shopping List</h1>
-	<div>
-	<ul>
-		<li>cookies</li>
-		<li>milk</li>
-		<li>Gemüse</li>
-		<ul>
-			<li>Brokkoli</li>
-			<li>Karotten</li>
-		</ul>
-	</ul>
+	<h1>Aktuelle Nachrichten hier verfügbar!</h1>
+	<section>
+		<a href="http://www.tagesschau.de"
+		target="_blank" title="Link zur tagesschau">ARD Tagesschau</a>
+	</section>
 </body>
 </html>
