test Back to top link

--- a/examples/index.html
+++ b/examples/index.html
@@ -5,10 +5,15 @@
 	<title>Immer Aktuell</title>
 </head>
 <body>
-	<h1>Aktuelle Nachrichten hier verfügbar!</h1>
-	<section>
+	<h1 id="top">Aktuelle Nachrichten hier verfügbar!</h1>
+	<section id="ARD">
+		<h1>ARD Nachrichten</h1>
 		<a href="http://www.tagesschau.de"
 		target="_blank" title="Link zur tagesschau">ARD Tagesschau</a>
 	</section>
+	<div>
+		Back to the top: <a href="#top">Back to the top</a>
+	</div>
+
 </body>
 </html>
