--- a/examples/index.html
+++ b/examples/index.html
@@ -16,6 +16,7 @@
 		<li><a href="#section2">Section 2</a></li>
 		<li><a href="#section3">Section 3</a></li>
 		<li><a href="#section4">Section 4</a></li>
+	</div>
 	<h2>Copy aus Files</h2>
 	<section id="section1">
     <h3>(#section1) Section 1</h3>
