--- a/module2-solution/index.html
+++ b/module2-solution/index.html
@@ -5,19 +5,28 @@
 </head>
 <body>
 	
-	<h1>Our Menu</h1>
+<h1>Our Menu</h1>
+
+<div id="c1">
 <section>
-	<h2>Chicken</h2>
-	<p> Text </p>
+	<h2 id="chicken">Chicken</h2>
+	<p> Today we highly recommend the chicken. Nicely and tasty prepared by our very talented cooks. As a side dish we offer you a mixed salad, with the following ingredients: lettuce, tomatoes, cucumber, chickpeas and with a dressing out of oil and vinegar. </p>
 </section>
+</div>
+
+<div id="c2">
 <section>
-	<h2>Beef</h2>
-	<p> Text </p>
+	<h2 id="beef">Beef</h2>
+	<p> Today we highly recommend the beef. Nicely and tasty prepared by our very talented cooks. As a side dish we offer you a mixed salad, with the following ingredients: lettuce, tomatoes, cucumber, chickpeas and with a dressing out of oil and vinegar.  </p>
 </section>
+</div>
+
+<div id="c3">
 <section>
-	<h2>Sushi</h2>
-	<p> Text</p>
+	<h2 id="sushi">Sushi</h2>
+	<p>Today we highly recommend the beef. Nicely and tasty prepared by our very talented cooks. As a side dish we offer you a mixed salad, with the following ingredients: lettuce, tomatoes, cucumber, chickpeas and with a dressing out of oil and vinegar.</p>
 </section>
+</div>
 
 </body>
 </html>
